SFDCGitProject/src/objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>Email_Id__c</fullName>
        <label>Email Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FromGuru__c</fullName>
        <formula>Guru__r.CrossObjectGuru__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FromGuru</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guru__c</fullName>
        <label>Guru</label>
        <referenceTo>Guru__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Voter__c</fullName>
        <label>Voter</label>
        <referenceTo>Voter__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>